--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Navbar */
 nav {
   font-family: monospace;
   font-size: 200%;
@@ -25,6 +26,7 @@ nav a:active {
   }
 }
 
+/* Sections */
 .section {
   min-height: 100vh;
   padding: 4rem 2rem;
@@ -48,7 +50,7 @@ nav a:active {
   }
 }
 
-
+/* Contact Links */
 .contact-links a {
   margin: 5px;
   color: #333;
@@ -59,4 +61,3 @@ nav a:active {
 .contact-links a:hover {
   color: #eb0c4f;
 }
-
